[IFX] Popover: Fixed the issue where clicking an error occurred when the child level was svg. & [IMP] <pro>Attachment: Optimize the display style of text overflow in the upload button.

--- a/components-pro/attachment/style/index.less
+++ b/components-pro/attachment/style/index.less
@@ -294,6 +294,7 @@
       max-width: 100%;
       overflow: hidden;
       text-overflow: ellipsis;
+      word-break: keep-all;
       pointer-events: initial;
     }
   }
